# scholar-agent

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  railway.json
backend/app/: __init__.py  auth.py  config.py  main.py
backend/app/routers/: agent.py  authors.py  brauer.py  scienti.py
backend/app/services/: agent.py  brauer.py  collector.py  registry.py  scienti.py
backend/data/: auslander.json  green.json  grothendieck.json  gutman.json  keller.json  reiten.json  ringel.json  schroll.json  todorov.json
backend/tests/: conftest.py  test_authors.py  test_brauer.py  test_health.py  test_scienti.py
backend/wheels/: README.md
frontend/: .dockerignore  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf.template  package-lock.json  package.json  railway.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  plotly.d.ts
scienti_sample/: generate.py
scienti_sample/cvlac/: 0000010000.json  0000010001.json  0000010002.json  0000010003.json  0000010004.json  0000010005.json  0000010006.json  0000010007.json  0000010008.json  0000010009.json  0000010010.json  0000010011.json  0000010012.json  0000010013.json  0000010014.json  0000010015.json  0000010016.json  0000010017.json  0000010018.json  0000010019.json  0000010020.json  0000010021.json  0000010022.json  0000010023.json  0000010024.json  0000010025.json  0000010026.json  0000010027.json  0000010028.json  0000010029.json  0000010030.json  0000010031.json  0000010032.json  0000010033.json  (+112 more)
(+56 files in other folders)
