[project]
name = "scholar-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the Scholar Agent (Brauer + Scienti)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pyalex>=0.21",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic>=2.9",
    "aiq-quivers>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.routers", "app.services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
